--- a/Math/Resources/Algebra/Algebra.tex
+++ b/Math/Resources/Algebra/Algebra.tex
@@ -146,4 +146,13 @@ Let $f(x)=ax^2+bx+c$ where $a,b,c \in \mathbb{R}$ and $a \not= 0$. Suppose $\lam
 \item Interval $(\lambda_1,\lambda_2)$ will be contained between the roots of $f(x)=0$ if $af(\lambda_1)<0,af(\lambda_2)<0$.
 \item $\lambda$ will be the required root of $f(x)=0$ if $f(\lambda)=0$ and $f'(\lambda)=0$.
 \end{itemize}
+\section{Progression and Series}
+4 June 2023
+\subsection{Arithmetic Progression}
+If $a$ is the first term and $d$ the common difference, the $A.P.$ can be written as $a,a+d,a+2d,...$. The $nth$ term $a_n$ is given by 
+$$a_n=a+(n-1)d$$ The sum of $S_n$ of the first terms of such an $A.P.$ is given by $$S_n=\frac{n}{2}(2a+(n-1)d)=\frac{n}{2}(a+a_n)$$
+If three terms are in $A.P.$, then the middle term is called the $Arimethic$ $Mean$ $(A.M.)$ between the other two i.e $a,b,c$ are in $A.P.$ then $$2b=a+c$$ is the $A.M$ of $a$ and $c$.\\
+If $a_1,a_2,a_3...a_n$ are $n$ numbers, then the arithmetic mean of these numbers $$A.M.=\frac{1}{n}(a_1+a_2+a_3+...+a_n)$$
+The numbers $A_1,A_2,A_3...A_n$ are said to be $A.M.$'s between the numbers $a$ and $b$ if $a,A_1,A_2...A_n,b$ are in $A.P.$ then
+$$A_n=a+\frac{n(b-a)}{n+1}=\frac{a+nb}{n+1}$$
 \end{document}
