--- a/Math/Resources/Algebra/Algebra.tex
+++ b/Math/Resources/Algebra/Algebra.tex
@@ -155,4 +155,13 @@ If three terms are in $A.P.$, then the middle term is called the $Arimethic$ $Me
 If $a_1,a_2,a_3...a_n$ are $n$ numbers, then the arithmetic mean of these numbers $$A.M.=\frac{1}{n}(a_1+a_2+a_3+...+a_n)$$
 The numbers $A_1,A_2,A_3...A_n$ are said to be $A.M.$'s between the numbers $a$ and $b$ if $a,A_1,A_2...A_n,b$ are in $A.P.$ then
 $$A_n=a+\frac{n(b-a)}{n+1}=\frac{a+nb}{n+1}$$
+\subsection{Geometric Progression}
+If $a$ is the first term and $r$ the common ratio, then the $G.P.$ can be written as $a,ar,ar^2...$. The $nth$ term $a_n$ is given by 
+$$a_n=ar^{n-1}$$ The sum $S_n$ of first $n$ terms of the $G.P.$ is 
+$$S_n=
+\begin{cases}
+  \frac{a(r^n -1)}{r-1}, r \not= 1 \\
+   na,r=1\
+\end{cases} $$ If $-1<r<1$, then the sum of infinite $G.P.$ is $a+ar+ar^2+...$ $$=\frac{a}{1-r}$$
+If three terms are in $G.P.$, then the middle term is called the geometric mean $G.M.$ between the two. So if $a,b,c$ are in $G.P.$ then  $b=\sqrt{ac}$ is geometric mean of $a$ and $c$.
 \end{document}
