--- a/Math/Resources/Calculus/Calculus.tex
+++ b/Math/Resources/Calculus/Calculus.tex
@@ -1,6 +1,8 @@
-\documentclass[twocolumn, 10pt]{article}
+\documentclass[12pt]{article}
 \usepackage{amsmath,amsthm,amssymb}
 \begin{document}
+\tableofcontents
+\newpage
 \section{Functions}
 25 May 2023
 \subsection{Functions. Domain of Definition}
