--- a/Math/Resources/Algebra/Algebra.tex
+++ b/Math/Resources/Algebra/Algebra.tex
@@ -1,6 +1,8 @@
-\documentclass[twocolumn, 10pt]{article}
+\documentclass[12pt]{article}
 \usepackage{amsmath,amsthm,amssymb,wrapfig,graphicx}
 \begin{document}
+\tableofcontents
+\newpage
 \section{Fundamental}
 28 May 2023
 \subsection{Intervals}
@@ -163,5 +165,7 @@ $$S_n=
   \frac{a(r^n -1)}{r-1}, r \not= 1 \\
    na,r=1\
 \end{cases} $$ If $-1<r<1$, then the sum of infinite $G.P.$ is $a+ar+ar^2+...$ $$=\frac{a}{1-r}$$
-If three terms are in $G.P.$, then the middle term is called the geometric mean $G.M.$ between the two. So if $a,b,c$ are in $G.P.$ then  $b=\sqrt{ac}$ is geometric mean of $a$ and $c$.
+If three terms are in $G.P.$, then the middle term is called the geometric mean $G.M.$ between the two. So if $a,b,c$ are in $G.P.$ then  $b=\sqrt{ac}$ is geometric mean of $a$ and $c$.\\
+If $a_1,a_2...a_n$ are non-zero positive numbers, then their $G.M$ is given by $$G=(a_1a_2a_3...a_n)^{1/n}$$
+If $G_1,G_2...G_n$ are $n$ geometric means between $a$ and $b$, $a,G_1,G_2....G_n,b$ will be a $G.P.$ $$G_n=a(1+ \sqrt[n+1]{\frac{b}{a}})^{n}$$
 \end{document}
