--- a/Math/Resources/Algebra/Algebra.tex
+++ b/Math/Resources/Algebra/Algebra.tex
@@ -168,4 +168,13 @@ $$S_n=
 If three terms are in $G.P.$, then the middle term is called the geometric mean $G.M.$ between the two. So if $a,b,c$ are in $G.P.$ then  $b=\sqrt{ac}$ is geometric mean of $a$ and $c$.\\
 If $a_1,a_2...a_n$ are non-zero positive numbers, then their $G.M$ is given by $$G=(a_1a_2a_3...a_n)^{1/n}$$
 If $G_1,G_2...G_n$ are $n$ geometric means between $a$ and $b$, $a,G_1,G_2....G_n,b$ will be a $G.P.$ $$G_n=a(1+ \sqrt[n+1]{\frac{b}{a}})^{n}$$
+\subsection{Harmonic Progression}
+The sequence $a_1,a_2,a_3....a_n(a_i \not= 0)$ is said to be $H.P.$ if the sequence $\frac{1}{a_1},\frac{1}{a_2}...\frac{1}{a_n}$ is an $A.P.$. The $nth$ term $a_n$ of the $H.P.$ is $$a_n=\frac{1}{a+(n-1)d}$$ where $a=\frac{1}{a_i}$ and $d=\frac{1}{a_2}-\frac{1}{a_1}$.\\
+\textbf{Harmonic Means:}\\
+If $a$ and $b$ are two non-zero numbers, then the harmonic mean of $a$ and $b$ is a number $H$ such that the numbers $a,H,b$ are in $H.P.$ We have $$\frac{1}{H}=\frac{1}{2}(\frac{1}{a}+\frac{1}{b})$$
+There is no formula for sum of $n$  terms of an $H.P.$, if $a_1,a_2...a_n$ are $n$ non-zero numbers, then the harmonic mean $H$ of these numbers is given by  $$\frac{1}{H}=\frac{1}{n}(\frac{1}{a_1}+\frac{1}{a_2}+...+\frac{1}{a_n})$$
+The $n$ number $H_1,H_2...H_n$ are said to be n-harmonic means between 
+$a$ and $b$, if $a,H_1,H_2...H_n,b$ are in $H.P.$ if $\frac{1}{a},
+\frac{1}{H_1},\frac{1}{H_2}...\frac{1}{H_n},\frac{1}{b}$ are in $A.P.$ 
+$$\frac{1}{H_n}=\frac{1}{a}+\frac{n(a-b)}{(n+1)ab}$$
 \end{document}
