--- a/Math/Resources/Algebra/Algebra.tex
+++ b/Math/Resources/Algebra/Algebra.tex
@@ -197,4 +197,14 @@ Suppose $a_1,a_2,a_3...a_n$ is a sequence such that sequence $a_2-a_1,a_3-a_2...
 $$S_n=a_1+a_2+a_3+...+a_{n-2}+a_{n-1}+a_n$$
 $$\implies a_n=a_1+[(a_2-a_1)+(a_3-a_2)+...+(a_n-a_{n-1})]$$
 Since the term within the brackets are either in an $A.P.$ or in a $G.P.$, we can find the value of $a_n$ the $nth$ term. We can now find the sum of $n$ terms of sequence as $$S=\sum_{k=1}^{n} a_k$$
+\subsection{Inequalities}
+\textbf{A.M. $\ge$ G.M. $\ge$ H.M} \\
+Let $a_1,a_2...a_n$ be $n$ positive real numbers, then we define their arithmetic mean $A$, geometric mean $G$ and harmonic mean $H$ as 
+$$A=\frac{a_1+a_2+...+a_n}{n}$$ $$G=(a_1 a_2 a_3 ... a_n)^{1/n}$$
+$$H=\frac{n}{(\frac{1}{a_1}+\frac{1}{a_2}+...+\frac{1}{a_n})}$$
+\section{Binomial Theorem}
+12 June 2023
+\subsection{Basic Results}
+$$(a+x)^n=^nC_0a^n+^nC_1a^{n-1}x+^nC_2a^{n-2}x^2+...+^nC_ra^{n-r}x^r+...+^nC_nx^n=\sum_{r=0}^{n} \medspace ^nC_rx^r. a^{n-r} $$
+$$(a-x)^n=^nC_0-^nC_1a^{n-1}x+^nC_2a^{n-2}x^2-...+(-1)^r \medspace ^nC_ra^{n-r}x^r+...+(-1)^n \medspace ^nC_nx^n.a^{n-r} $$
 \end{document}
