--- a/Math/Resources/Calculus/Calculus.tex
+++ b/Math/Resources/Calculus/Calculus.tex
@@ -342,11 +342,11 @@ If $\varphi(x)=\int_{g(x)}^{h(x)}f(t)dt$, then
 $$\frac{d}{dx}(\varphi(x))=h'(x)f(h(x))-g'(x)f(g(x))$$
 \section{Other Integrals}
 \subsection{Wallis' Integral}
-$$\int_{0}^{\frac{\pi}{2}} \sin^{n}xdx/\int_{0}^{\frac{\pi}{2}} \cos^{n}xdx=
+$$\int_{0}^{\frac{\pi}{2}} \sin^{m}x \cos^{n}xdx=
 \begin{cases}
-  \frac{\pi}{2}\frac{(n-1)!}{n!}, \text{n is even}\ \\
+  \frac{\pi}{2}\frac{(m-1)!!(n-1)!!}{(m+n)!!}, \text{when m and n both are even.}\ \\
   
-  \frac{(n-1)!}{n!},\text{n is odd}\
+  \frac{(m-1)!!(n-1)!!}{(m+n)!!},\text{else}\
 \end{cases} $$
 \subsection{Pi Function}
 $$\Pi(n)= \int_{0}^{\infty}x^{n}e^{-x}dx$$
